Commit 1. new boxes to be under images 2. unwrap a few images 3. Fix content sticking to edge 4. Top book cover png to jpg 5. spacing to be same as index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,12 +196,11 @@ iframe {
 .purchase-methods a:hover {
     opacity: 90%;
 }
-
+.other-writings {
+    margin: 2rem 0;
+}
 .other-writings img {
     max-width: 100%;
-}
-.other-writings p {
-    padding-bottom: 2rem;
 }
 .other-writings-text {
     width: 17rem;
